--- a/start.html
+++ b/start.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Start file is not index.html file</h1>
+    <h3>IMAAAGE</h3>
+    <img src="blueberry.png" alt="">
 </body>
 </html>
