--- a/start.html
+++ b/start.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Start file is not index.html file</h1>
     <h3>IMAAAGE</h3>
+    <div>
+        <h3>New Blog</h3>
+        <h5>Roman ravings of madman</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iure eveniet perspiciatis repellat nulla beatae unde maxime ex perferendis, officiis sunt laborum quam impedit eum provident fugiat placeat ducimus dolorem soluta adipisci explicabo aliquid dolorum repudiandae dolore. Ea, expedita eos?</p>
+    </div>
     <img src="blueberry.png" alt="">
 </body>
 </html>
